@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
+<form string="Covered Element">
+    <label name="item_desc"/>
+    <field name="item_desc" widget="selection" readonly="1"/>
+    <label name="party"/>
+    <field name="party" readonly="1"/>
+    <newline/>
+    <field name="is_person" invisible="1"/>
+    <newline/>
+    <field name="product" invisible="1"/>
+    <field name="party_extra_data" invisible="1"/>
+    <newline/>
+    <field name="extra_data" colspan="4" no_command="1"/>
+</form>
