@@ -1,3 +1,4 @@
+* Add covered element modification endorsement
 * remove_option endorsement allows to void an option
 
 Version 1.4 - 2015-05-29
